src/pages/work/fastly-festival.module.css
.section {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  column-gap: 5em;

  padding: 0 10% 5% 10%;
  text-align: justify;
}

.red {
  background-color: var(--brand-primary);
  color: var(--helen-off-white);
}

.white {
  background-color: var(--helen-white);
}

.title {
  grid-column: 1 / 3;
  grid-row: 1;
}

.cipIllustrationSnippets {
  grid-column: 3;
  justify-self: end;
  align-self: center;

  width: 25%;
}

.p1 {
  grid-column: 1 / 3;
  grid-row: 2 / span 2;
}

.p2 {
  grid-column: 3 / 5;
  grid-row: 2;
}

.cipTable {
  margin-left: -15px;
  table-layout: fixed;
}

.cipTable td {
  height: 20px;
}

.tableNumbers {
  background-color: var(--brand-primary);
  border-radius: 50%;
  color: var(--helen-off-white);
  text-align: center;
  width: 25px;
}

.snippetSections {
  display: grid;
  grid-template-columns: repeat(10, 1fr);
  column-gap: 5em;
  align-items: center;
  justify-items: center;

  padding: 10%;
  text-align: justify;
}

.styletiles,
.signage,
video {
  width: 100%;
}

.styletiles {
  grid-column: 1 / 6;
}

.styleTilesParagraph {
  grid-column: 7 / 10;
}

.logo {
  grid-column: 1 / 4;
}

.stripes {
  grid-column: 4 / 7;
}

.logoParagraph {
  grid-column: 7 / 10;
}

.icons {
  grid-column: 1 / 6;
}

.iconsParagraph {
  grid-column: 6 / 9;
}

.signageParagraph {
  grid-column: 1 / 5;
}

.signage {
  grid-column: 6 / 11;
}

.guitar {
  width: 10%;
  justify-self: center;
  text-align: center;
  margin: auto;
}

